--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@ li {
   list-style: none;
 }
 
+span {
+  color: #3a4ed5;
+}
+
 a {
   color: #000;
 
@@ -126,6 +130,7 @@ nav ul {
 
   & li a {
     color: #fff;
+    text-decoration: none;
   }
 }
 
